# axongate-engine

./: AGENTS.md  Cargo.toml  config.yaml
docs/: API.md
src/: lib.rs  main.rs  usage_collector.rs
src/cache/: mod.rs
src/config/: mod.rs
src/error/: mod.rs
src/models/: mod.rs
src/protocol/: adapter.rs  anthropic.rs  detector.rs  mod.rs  openai.rs
src/proxy/: mod.rs
src/router/: mod.rs
src/telemetry/: mod.rs
